FIXED invisible text, by adding font-display: swap; to the fontface

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,42 +6,49 @@
   font-family: "Poppins";
   font-weight: 200;
   src: url("../public/fonts/Poppins/Poppins-ExtraLight.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   font-weight: 300;
   src: url("../public/fonts/Poppins/Poppins-Light.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   font-weight: 400;
   src: url("../public/fonts/Poppins/Poppins-Regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   font-weight: 500;
   src: url("../public/fonts/Poppins/Poppins-Medium.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   font-weight: 600;
   src: url("../public/fonts/Poppins/Poppins-SemiBold.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   font-weight: 700;
   src: url("../public/fonts/Poppins/Poppins-Bold.ttf");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Poppins";
   font-weight: 900;
   src: url("../public/fonts/Poppins/Poppins-Black.ttf");
+  font-display: swap;
 }
 
 @layer base {
